# alink

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.example.toml  sqlx-data.json
.github/workflows/: docker.yml
.sqlx/: query-abd4d405a461187311684ccdff2f342b85dc3cad03c3c7905323f2c67f531fff.json  query-c269834c8ca2042c40ff8cb751521569ce26621dc56acada4c94d244f740a054.json  query-f223f506a220951d7c73dac13d483c84de1ad11a4c23fbb4357835144f8b168a.json
migrations/: 20220405052626_init.down.sql  20220405052626_init.up.sql
migrations/2024-10-18-134637_init/: up.sql
recursive_link/: Cargo.toml
recursive_link/src/: lib.rs
src/: cli.rs  config.rs  db.rs  handler.rs  lib.rs  main.rs  runner.rs  schema.rs  searcher.rs
src/utils/: link.rs
