[package]
name = "alink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.10"
clap = { version = "4", features = ["derive"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "sqlite",
    "migrate",
    "macros",
    "runtime-tokio-rustls"
]
