[package]
name = "alink"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["recursive_link"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recursive_link.path = "./recursive_link"
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
parking_lot = "0.12.1"
toml = "0.5.8"
notify = "4.0.17"
tracing = "0.1.40"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }

[dependencies.diesel]
version = "2"
features = ["chrono", "r2d2", "sqlite"]
